--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,7 @@
     "MIT"
   ],
   "require": {
-    "php": "^7.0 || ^8.0",
-    "oxid-esales/oxideshop-ce": "6.5 - 6.13"
+    "symfony/dependency-injection": "^3.1|^5.4.11"
   },
   "autoload": {
     "psr-4": {
