add shorthand function to get DI handler

--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,9 @@
   "autoload": {
     "psr-4": {
       "D3\\DIContainerHandler\\": "./"
-    }
+    },
+    "files": [
+      "autoload/functions_oxDIC.php"
+    ]
   }
 }
