--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "MIT"
   ],
   "require": {
-    "symfony/dependency-injection": "^3.1|^5.4.11"
+    "symfony/dependency-injection": "^3.1|^5.4.11|^6.0"
   },
   "autoload": {
     "psr-4": {
