--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
   },
   "require-dev": {
     "d3/testingtools": "^1.0",
-    "phpunit/phpunit": "^9.6"
+    "phpunit/phpunit": "^9.6",
+    "friendsofphp/php-cs-fixer": "~3.13.0"
   },
   "autoload": {
     "psr-4": {
@@ -38,6 +39,8 @@
     ]
   },
   "scripts": {
+    "php-cs-fixer": "./vendor/bin/php-cs-fixer fix --config=vendor/d3/oxid-dic-handler/.php-cs-fixer.php",
+
     "phpunit": "XDEBUG_MODE=coverage ./vendor/bin/phpunit --bootstrap=source/bootstrap.php --config=vendor/d3/oxid-dic-handler/tests/"
   }
 }
