--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
     "phpunit/phpunit": "^9.6",
     "friendsofphp/php-cs-fixer": "~3.13.0",
     "phpstan/phpstan": "^1.10",
-    "rector/rector": "^0.18.13"
+    "rector/rector": "^0.18.13",
+    "mikey179/vfsstream": "^1.6.8"
   },
   "autoload": {
     "psr-4": {
